feat(init): upfate structure for storybook

--- a/practice/tsconfig.json
+++ b/practice/tsconfig.json
@@ -20,6 +20,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": ["storybook-static/src"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
