--- a/practice/.gitignore
+++ b/practice/.gitignore
@@ -11,7 +11,6 @@ node_modules
 dist
 dist-ssr
 *.local
-storybook-static
 
 # Editor directories and files
 .vscode/*
@@ -25,3 +24,5 @@ storybook-static
 *.sw?
 
 *storybook.log
+
+.vercel
