--- a/practice/tsconfig.node.json
+++ b/practice/tsconfig.node.json
@@ -1,11 +1,10 @@
 {
   "compilerOptions": {
-    "composite": true,
-    "skipLibCheck": true,
-    "module": "ESNext",
-    "moduleResolution": "bundler",
-    "allowSyntheticDefaultImports": true,
-    "strict": true
+      "composite": true,
+      "skipLibCheck": true,
+      "module": "ESNext",
+      "moduleResolution": "node",
+      "allowSyntheticDefaultImports": true
   },
   "include": ["vite.config.ts"]
 }
